--- a/mysite/src/index.html
+++ b/mysite/src/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <meta charset="UTF-8">
-    <title>Luyao Hou</title>
+    <head>
+        <meta charset="UTF-8" name="viewport" content="initial-scale=1.0">
+        <title>Luyao Hou</title>
+    </head>
+    <body>
+        <div id="app" />
+    </body>
 </html>
-<body>
-    <div id="app" />
-</body>
