--- a/mysite/src/index.html
+++ b/mysite/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8" name="viewport" content="initial-scale=1.0">
         <title>Luyao Hou</title>
